--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     
     <section id="home">
         <h1>Welcome to My Portfolio</h1>
-        <p>Hello! I'm [Your Name], a passionate [Your Profession]</p>
+        <p>Hello! I'm K Daniel Joseph, an aspiring software engineer</p>
     </section>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>[A brief introduction about yourself]</p>
+        <p>Aspiring Software Engineer with a strong foundation in Computer Science and a specialization in Data Science. Currently, in the third year of B. Tech, I am seeking opportunities to apply analytical skills and technical expertise to real-world projects. Committed to continuous learning and development, with a keen interest in leveraging data-driven solutions to drive innovation. Aiming for a dynamic role that offers growth and challenges.</p>
     </section>
 
     <section id="skills">
