--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Daniel Joseph's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,25 +23,32 @@
     
     <section id="home">
         <h1>Welcome to My Portfolio</h1>
-        <p>Hello! I'm K Daniel Joseph, an aspiring software engineer</p>
+        <p>Hello! I'm Daniel Joseph, a passionate Computer Science Student with a specialization in Data Science.</p>
     </section>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Aspiring Software Engineer with a strong foundation in Computer Science and a specialization in Data Science. Currently, in the third year of B. Tech, I am seeking opportunities to apply analytical skills and technical expertise to real-world projects. Committed to continuous learning and development, with a keen interest in leveraging data-driven solutions to drive innovation. Aiming for a dynamic role that offers growth and challenges.</p>
+        <p>Aspiring Software Engineer with a strong foundation in Computer Science and a specialization in Data Science. Currently in the third year of B. Tech, seeking opportunities to apply analytical skills and technical expertise to real-world projects. Committed to continuous learning and development, with a keen interest in leveraging data-driven solutions to drive innovation. Aiming for a dynamic role that offers growth and challenges.</p>
     </section>
 
     <section id="skills">
         <h2>Skills</h2>
         <div class="skill">
-            <p>HTML</p>
+            <p>Python</p>
             <div class="skill-bar" style="width: 90%;"></div>
         </div>
         <div class="skill">
-            <p>CSS</p>
+            <p>Data Science</p>
             <div class="skill-bar" style="width: 85%;"></div>
         </div>
-        <!-- Add more skills as needed -->
+        <div class="skill">
+            <p>Machine Learning</p>
+            <div class="skill-bar" style="width: 80%;"></div>
+        </div>
+        <div class="skill">
+            <p>Content Writing</p>
+            <div class="skill-bar" style="width: 70%;"></div>
+        </div>
     </section>
 
     <section id="projects">
@@ -49,29 +56,32 @@
         <div class="project">
             <h3>Project Title</h3>
             <p>[Project description]</p>
-            <a href="[Project Link]" target="_blank">View Project</a>
+            <a href="#" target="_blank">View Project</a>
         </div>
-        <!-- Add more projects as needed -->
     </section>
 
     <section id="experience">
         <h2>Experience</h2>
         <div class="experience">
-            <h3>Company Name</h3>
-            <p>[Role]</p>
-            <p>[Responsibilities]</p>
+            <h3>Rise Krishna Sai Prakasam Group of Institutions</h3>
+            <p>Student • Full-time • 11/2022 - Present</p>
         </div>
-        <!-- Add more experience entries as needed -->
+        <div class="experience">
+            <h3>Prodigy InfoTech</h3>
+            <p>Intern • Internship • 06/2024 - 06/2024</p>
+        </div>
     </section>
 
     <section id="education">
         <h2>Education</h2>
         <div class="education">
-            <h3>Institution Name</h3>
-            <p>[Degree]</p>
-            <p>[Year]</p>
+            <h3>Narayana Junior College</h3>
+            <p>Intermediate in MPC • GPA: 7.2 • 08/2020 - 06/2022</p>
         </div>
-        <!-- Add more education entries as needed -->
+        <div class="education">
+            <h3>Narayana E-Techno School</h3>
+            <p>SSC • GPA: 10.0 • 06/2017 - 06/2020</p>
+        </div>
     </section>
 
     <section id="contact">
@@ -85,7 +95,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2024 Daniel Joseph. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
