--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project Title</h3>
-            <p>[Project description]</p>
+            <h3>Project Title: House Price Prediction System</h3>
+            <p>This project demonstrated the use of several machine learning techniques to predict house prices. The models used were Gradient Boosting, Linear Regression, and Random Forest. Among these, Random Forest showed promising results based on RMSE and R^2 scores.</p>
             <a href="#" target="_blank">View Project</a>
         </div>
     </section>
@@ -69,6 +69,10 @@
         <div class="experience">
             <h3>Prodigy InfoTech</h3>
             <p>Intern • Internship • 06/2024 - 06/2024</p>
+        </div>
+        <div class="experience">
+            <h3>Next24Tech technology & Services</h3>
+            <p>Data Science Intern • Internship • 07/2024 - 08/2024</p>
         </div>
     </section>
 
