--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="project">
             <h3>Project Title: House Price Prediction System</h3>
             <p>This project demonstrated the use of several machine learning techniques to predict house prices. The models used were Gradient Boosting, Linear Regression, and Random Forest. Among these, Random Forest showed promising results based on RMSE and R^2 scores.</p>
-            <a href="#" target="_blank">View Project</a>
+            <a href="https://github.com/d3005/House_Price_Prediction" target="_blank">View Project</a>
         </div>
     </section>
 
