--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="dashboard-embed" data-aos="fade-up" data-aos-delay="150">
                 <iframe
                     class="dashboard-frame"
-                    src="http://127.0.0.1:8050/"
+                    src="/dashboard/"
                     title="Dash App"
                     loading="lazy"
                     referrerpolicy="no-referrer"
