--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* 3D Transitions and Tilt */
+        .enable-3d { perspective: 1000px; transform-style: preserve-3d; }
+        .tilt-3d { transform-style: preserve-3d; transition: transform 300ms cubic-bezier(0.19, 1, 0.22, 1), box-shadow 300ms ease; will-change: transform, box-shadow; }
+        .tilt-3d .tilt-raise { transform: translateZ(20px); }
+        .btn, .social-icon, .project-card { transform-style: preserve-3d; transition: transform 300ms cubic-bezier(0.19, 1, 0.22, 1), box-shadow 300ms ease; }
+        .btn:hover, .social-icon:hover, .project-card:hover { box-shadow: 0 20px 40px rgba(0,0,0,0.2); }
+        .btn span, .btn i { position: relative; transform: translateZ(8px); }
+        @media (prefers-reduced-motion: reduce) { .tilt-3d, .btn, .social-icon, .project-card { transition: none !important; transform: none !important; } }
+    </style>
     
     <!-- Preload critical assets -->
     <link rel="preload" href="assets/sounds/hover.mp3" as="audio">
@@ -101,13 +111,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#home" class="nav-link" data-sound="hover">Home</a></li>
-                <li><a href="#about" class="nav-link" data-sound="hover">About</a></li>
-                <li><a href="#skills" class="nav-link" data-sound="hover">Skills</a></li>
-                <li><a href="#projects" class="nav-link" data-sound="hover">Projects</a></li>
-                <li><a href="#experience" class="nav-link" data-sound="hover">Experience</a></li>
-                <li><a href="#education" class="nav-link" data-sound="hover">Education</a></li>
-                <li><a href="#contact" class="nav-link" data-sound="hover">Contact</a></li>
+                <li><a href="/" class="nav-link" data-sound="hover">Home</a></li>
+                <li><a href="/about" class="nav-link" data-sound="hover">About</a></li>
+                <li><a href="/skills-education" class="nav-link" data-sound="hover">Skills &amp; Education</a></li>
+                <li><a href="/experience" class="nav-link" data-sound="hover">Experience</a></li>
+                <li><a href="/contact" class="nav-link" data-sound="hover">Get in Touch</a></li>
             </ul>
         </nav>
         <div class="menu-toggle" data-sound="click">
@@ -129,19 +137,18 @@
                 </div>
                 <p class="subtitle">Computer Science Student specializing in Data Science</p>
                 <div class="cta-buttons">
-                    <a href="#contact" class="btn primary-btn" data-sound="click">Get In Touch</a>
-                    <a href="#projects" class="btn secondary-btn" data-sound="click">View My Work</a>
+                    <a href="/contact" class="btn primary-btn" data-sound="click">Get In Touch</a>
+                    <a href="/skills-education" class="btn secondary-btn" data-sound="click">View My Work</a>
                 </div>
                 <div class="social-icons">
-                    <a href="#" class="social-icon" data-sound="hover"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-icon" data-sound="hover"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-icon" data-sound="hover"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-icon" data-sound="hover"><i class="fas fa-envelope"></i></a>
+                    <a href="https://github.com/d3005" target="_blank" rel="noopener" class="social-icon" data-sound="hover"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/daniel-joseph-kommu" target="_blank" rel="noopener" class="social-icon" data-sound="hover"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:dannyjoseph3007@outlook.com" class="social-icon" data-sound="hover"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </div>
         <div class="scroll-down">
-            <a href="#about" data-sound="hover">
+            <a href="/about" data-sound="hover">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -538,9 +545,9 @@
                     </div>
                     
                     <div class="social-links">
-                        <a href="#" class="social-link" data-sound="hover"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link" data-sound="hover"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link" data-sound="hover"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/d3005" target="_blank" rel="noopener" class="social-link" data-sound="hover"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/daniel-joseph-kommu" target="_blank" rel="noopener" class="social-link" data-sound="hover"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:dannyjoseph3007@outlook.com" class="social-link" data-sound="hover"><i class="fas fa-envelope"></i></a>
                         <a href="#" class="social-link" data-sound="hover"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
@@ -589,10 +596,9 @@
                 </div>
                 <p>© 2024 Daniel Joseph. All rights reserved.</p>
                 <div class="footer-social">
-                    <a href="#" class="social-icon" data-sound="hover"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-icon" data-sound="hover"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-icon" data-sound="hover"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-icon" data-sound="hover"><i class="fas fa-envelope"></i></a>
+                    <a href="https://github.com/d3005" target="_blank" rel="noopener" class="social-icon" data-sound="hover"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/daniel-joseph-kommu" target="_blank" rel="noopener" class="social-icon" data-sound="hover"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:dannyjoseph3007@outlook.com" class="social-icon" data-sound="hover"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </div>
